<resources>
    <string name="app_name">MyBlog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">SignIn</string>
    <string name="not_have_an_account_sign_up">Not have an account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
</resources>